--- a/spe_events/static/atce/css/_basehtml.scss
+++ b/spe_events/static/atce/css/_basehtml.scss
@@ -23,9 +23,11 @@ h3 {
 }
 h4 {
   font-size:              $h4size;
+  font-weight:            $font-light;
 }
 p {
   font-size:              $psize;
+  font-weight:            $font-light;
 }
 
 * {
