--- a/spe_events/static/atce/css/_vars.scss
+++ b/spe_events/static/atce/css/_vars.scss
@@ -12,13 +12,15 @@ $col-spe-blue-dark:     #1c407d;
 $col-grey-dark:         #363636;
 $col-grey-light:        #e1e1e1;
 
-$font-main:             "proxima-nova",sans-serif;
-$font-titles:           "proxima-nova",sans-serif;
+$font-main:             'Montserrat', sans-serif;
+$font-titles:           'Montserrat', sans-serif;
+$font-titles2:          'Ubuntu', sans-serif;
 
 $font-bold:             700;
 $font-regular:          400;
 $font-light:            300;
-$font-thin:             100;
+$font-extralight:       200;
+//$font-thin:             100;
 
 $h1size:                30px;
 $h2size:                25px;
