--- a/spe_events/static/atce/css/_header.scss
+++ b/spe_events/static/atce/css/_header.scss
@@ -2,6 +2,7 @@
 /* ATCE HEADER & MENUS
 ====================================================================== */
 @import 'vars';
+@import "mixins";
 
 .topbar {
   background-color:   $col-black;
@@ -9,13 +10,60 @@
   height:             30px;
   font-size:          $psize;
   padding:            3px 0 0 0;
+
+  a {
+    color:            $col-white;
+
+    &:hover {
+      background-color: $col-white;
+      color:            $col-black;
+    }
+  }
 }
 .logobar {
-  height:             100px;
+  min-height:         100px;
 }
 .menubar {
   background-color:   $col-atce-green;
   color:              $col-white;
   min-height:         60px;
-  padding:            10px 0 0 0;
+  padding:            0 0 0 0;
+}
+.topAddress {
+  p {
+    font-weight:      $font-regular;
+  }
+}
+.mainLogo {
+  padding-top:        20px;
+}
+.topAddress {
+  color:              $col-spe-blue-dark;
+}
+.mainLogoImg {
+  max-width:          400px;
+}
+.navbar {
+  margin-bottom:      0;
+}
+.navbar-nav {
+  li {
+
+    a {
+      padding-top:      20px;
+      font-size:        $h3size;
+      font-weight:      $font-light;
+      color:            $col-white;
+      height:           58px;
+
+      @include text-shadow(1px, 1px, 2px, rgba(0,0,0,.4));
+
+      &:hover { background-color: $col-atce-greenhover; }
+      }
+  }
+  li:first-child {
+    a {
+      padding-left:   0;
+    }
+  }
 }
