--- a/spe_promotions/templates/spe_promotions/plugins/image_left.html
+++ b/spe_promotions/templates/spe_promotions/plugins/image_left.html
@@ -1,38 +1,44 @@
 {% load i18n %}
 
 {% for promo in promos %}
-    <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %} dontPrintMe"
-                style="min-height: 150px">
-    <a href="{{ promo.url }}">
-        <div class="story-wrap row">
-            {% if promo.picture and promo.picture.url %}
-                <figure class="thumb col-sm-6">
-{#                    <div class="img-wrap"><img src="{{ promo.picture.url }}" class="img-responsive"/></div>#}
-                    <div class="img-wrap detailImgWrapLeft" style="background-image: url({{ promo.picture.url }})"></div>
-                </figure>
-                <div class="col-sm-6">
-            {% else %}
-                <div class="col-sm-12">
-            {% endif %}
+    <article
+            class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %} dontPrintMe"
+            style="min-height: 150px">
+        <a href="{{ promo.url }}">
+            <div class="story-wrap row">
+                {% if promo.picture and promo.picture.url %}
+                    <figure class="thumb col-sm-6">
+                        {#                    <div class="img-wrap"><img src="{{ promo.picture.url }}" class="img-responsive"/></div>#}
+                        <div class="img-wrap detailImgWrapLeft"
+                             style="background-image: url({{ promo.picture.url }})"></div>
+                    </figure>
+                    <div class="col-sm-6">
+                {% else %}
+                    <div class="col-sm-12">
+                {% endif %}
                 <h3>{{ promo.event }}</h3>
-            {% if promo.sponsored %}
-                <p class="sponsored">SPONSORED CONTENT</p>
-            {% endif %}
+                {% if promo.sponsored %}
+                    <p class="sponsored">SPONSORED CONTENT</p>
+                {% endif %}
                 <p class="sideListDateTWA">
-                  {{ promo.event_text_date|default:"" }}
-                  {% if promo.event_location %}
-                    - {{ promo.event_location }}
-                  {% endif %}
+                    {{ promo.event_text_date|default:"" }}
+                    {% if promo.event_location %}
+                        - {{ promo.event_location }}
+                    {% endif %}
                 </p>
                 <p>{{ promo.teaser | safe }}</p>
-            </div>
-        </div>
-    </a>
+                </div>
+                </div>
+        </a>
     </article>
 {% empty %}
     <p class="well">{% trans "No items available" %}</p>
 {% endfor %}
 
 {% if more_url and more_text %}
-    <div class="row morepromo"><div class="col-xs-12 see-all-div-carosel"><a class="see-all-promo" id="features" href="{{ more_url }}">{{ more_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+    <div class="row morepromo">
+        <div class="col-xs-12 see-all-div-carosel"><a class="see-all-promo" id="features"
+                                                      href="{{ more_url }}">{{ more_text }}<span></span><i
+                class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
+    </div>
 {% endif %}
