--- a/spe_promotions/templates/spe_promotions/plugins/membership_carousel.html
+++ b/spe_promotions/templates/spe_promotions/plugins/membership_carousel.html
@@ -1,49 +1,55 @@
 {% load cms_tags sekizai_tags %}
 
 <div id="myCarousel{{ plugin.instance.id }}" class="carousel slide" data-ride="carousel" data-interval="10000">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-  {% for promo in promos %}
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        {% for promo in promos %}
 
-      {% if promo.picture and promo.picture.url %}
-          {% if forloop.first %}
-              <li data-target="#myCarousel{{ plugin.instance.id }}" data-slide-to="0" data-interval="10000" class="active"></li>
-          {% else %}
-              <li data-target="#myCarousel{{ plugin.instance.id }}" data-slide-to="{{ forloop.counter0 }}" data-interval="10000"></li>
-          {% endif %}
-      {% endif %}
-  {% endfor %}
-  </ol>
+            {% if promo.picture and promo.picture.url %}
+                {% if forloop.first %}
+                    <li data-target="#myCarousel{{ plugin.instance.id }}" data-slide-to="0" data-interval="10000"
+                        class="active"></li>
+                {% else %}
+                    <li data-target="#myCarousel{{ plugin.instance.id }}" data-slide-to="{{ forloop.counter0 }}"
+                        data-interval="10000"></li>
+                {% endif %}
+            {% endif %}
+        {% endfor %}
+    </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-      {% for promo in promos %}
-          {% if promo.picture and promo.picture.url %}
-              {% if forloop.first %}
-                  <div class="item active" style="background-image:url({{ promo.picture.url }});">
-                      <a href="{{ promo.url }}" target="_blank">
-                          <div class="carousel-caption">
-                              <h3>{{ promo.title }} </h3>
-                              <h4>{{ promo.teaser | safe }}</h4>
-                          </div>
-                      </a>
-                  </div>
-              {% else %}
-                  <div class="item" style="background-image:url({{ promo.picture.url }});">
-                      <a href="{{ promo.url }}">
-                          <div class="carousel-caption">
-                              <h3>{{ promo.title }}</h3>
-                              <h4>{{ promo.teaser | safe }}</h4>
-                          </div>
-                      </a>
-                  </div>
-              {% endif %}{# forloop first #}
-          {% endif %}
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        {% for promo in promos %}
+            {% if promo.picture and promo.picture.url %}
+                {% if forloop.first %}
+                    <div class="item active" style="background-image:url({{ promo.picture.url }});">
+                        <a href="{{ promo.url }}" target="_blank">
+                            <div class="carousel-caption">
+                                <h3>{{ promo.title }} </h3>
+                                <h4>{{ promo.teaser | safe }}</h4>
+                            </div>
+                        </a>
+                    </div>
+                {% else %}
+                    <div class="item" style="background-image:url({{ promo.picture.url }});">
+                        <a href="{{ promo.url }}">
+                            <div class="carousel-caption">
+                                <h3>{{ promo.title }}</h3>
+                                <h4>{{ promo.teaser | safe }}</h4>
+                            </div>
+                        </a>
+                    </div>
+                {% endif %}{# forloop first #}
+            {% endif %}
 
-      {% endfor %}
-  </div>
+        {% endfor %}
+    </div>
 
     {% if more_url and more_text %}
-        <div class="row"><div class="col-xs-12 see-all-div-promo"><a class="see-all" id="features" href="{{ more_url }}">{{ more_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+        <div class="row">
+            <div class="col-xs-12 see-all-div-promo"><a class="see-all" id="features"
+                                                        href="{{ more_url }}">{{ more_text }}<span></span><i
+                    class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
+        </div>
     {% endif %}
 </div>
