--- a/spe_promotions/templates/spe_promotions/plugins/overlay.html
+++ b/spe_promotions/templates/spe_promotions/plugins/overlay.html
@@ -2,21 +2,21 @@
     {% if promo.picture and promo.picture.url %}
         <article class="tile whiteback featured-story">
             <a href="{{ promo.url }}">
-            <div class="story-wrap" style="background-image:url({{ promo.picture.url }});">
-                <div class="story-text">
-                    <h3>{{ promo.event }}</h3>
-            {% if promo.sponsored %}
-                <p class="sponsored">SPONSORED CONTENT</p>
-            {% endif %}
-                    <p class="sideListDateTWA" style="color:#FDD017">
-                      {{ promo.event_text_date|default:"" }}
-                      {% if promo.event_location %}
-                        - {{ promo.event_location }}
-                      {% endif %}
-                    </p>
-                    <p>{{ promo.teaser | safe }}</p>
+                <div class="story-wrap" style="background-image:url({{ promo.picture.url }});">
+                    <div class="story-text">
+                        <h3>{{ promo.event }}</h3>
+                        {% if promo.sponsored %}
+                            <p class="sponsored">SPONSORED CONTENT</p>
+                        {% endif %}
+                        <p class="sideListDateTWA" style="color:#FDD017">
+                            {{ promo.event_text_date|default:"" }}
+                            {% if promo.event_location %}
+                                - {{ promo.event_location }}
+                            {% endif %}
+                        </p>
+                        <p>{{ promo.teaser | safe }}</p>
+                    </div>
                 </div>
-            </div>
             </a>
         </article>
     {% endif %}
@@ -28,5 +28,9 @@
 
 
 {% if more_url and more_text %}
-    <div class="row morepromo"><div class="col-xs-12 see-all-div-carosel"><a class="see-all-promo" id="features" href="{{ more_url }}">{{ more_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+    <div class="row morepromo">
+        <div class="col-xs-12 see-all-div-carosel"><a class="see-all-promo" id="features"
+                                                      href="{{ more_url }}">{{ more_text }}<span></span><i
+                class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div>
+    </div>
 {% endif %}
