Adding title for staff template views.

--- a/mainsite/templates/staff_base.html
+++ b/mainsite/templates/staff_base.html
@@ -2,6 +2,7 @@
 {% load cms_tags sekizai_tags %}
 {% load menu_tags %}
 
+{% block title %}Staff Site Administration{% endblock title %}
 {% block web_fonts %}
     {% include 'include_scripts.html' %}
     {{ block.super }}
