--- a/spe_custom_agenda/templates/cms_plugins/accordion_agenda.html
+++ b/spe_custom_agenda/templates/cms_plugins/accordion_agenda.html
@@ -1,6 +1,6 @@
 {% load sekizai_tags cms_tags %}
 
-<div class="container fluid">
+<div class="table-responsive">
 
 <h2>{{ title }}</h2>
     <hr />
@@ -26,6 +26,7 @@
                                     <tr>
                                         <th>Time</th>
                                         <th>Event</th>
+                                        <th>Description</th>
                                     </tr>
                                 </thead>
                             <tbody>
@@ -37,6 +38,11 @@
                 <td class="agenda-events">
                     <div class="agenda-event">
                         {{ item.title }}
+                    </div>
+                </td>
+                <td class="agenda-events">
+                    <div class="agenda-event">
+                        {{ item.session_description | safe }}
                     </div>
                 </td>
             </tr>
