SPE Custom Agenda
Added Accordion by Session Template and Logic

--- a/spe_custom_agenda/templates/cms_plugins/accordion_agenda.html
+++ b/spe_custom_agenda/templates/cms_plugins/accordion_agenda.html
@@ -26,6 +26,7 @@
                                     <tr>
                                         <th>Time</th>
                                         <th>Event</th>
+                                        <th>Location</th>
                                         <th>Description</th>
                                     </tr>
                                 </thead>
@@ -38,6 +39,11 @@
                 <td class="agenda-events">
                     <div class="agenda-event">
                         {{ item.title }}
+                    </div>
+                </td>
+                <td>
+                    <div class=""agenda-event">
+                        {{ item.location }}
                     </div>
                 </td>
                 <td class="agenda-events">
