--- a/spe_custom_agenda/templates/cms_plugins/agenda.html
+++ b/spe_custom_agenda/templates/cms_plugins/agenda.html
@@ -43,6 +43,7 @@
                         <th>Date</th>
                         <th>Time</th>
                         <th>Event</th>
+                        <th>Location</th>
                         <th>Description</th>
                     </tr>
                 </thead>
@@ -65,6 +66,11 @@
                         <td class="agenda-events">
                             <div class="agenda-event">
                                 {{ item.title }}
+                            </div>
+                        </td>
+                        <td>
+                            <div class=""agenda-event">
+                                {{ item.location }}
                             </div>
                         </td>
                         <td>
