--- a/spe_events/static/atce/css/_vars.scss
+++ b/spe_events/static/atce/css/_vars.scss
@@ -10,6 +10,7 @@ $col-atce-greenhover:   #74d79e;
 $col-spe-blue:          #0c4c93;
 $col-spe-blue-dark:     #1c407d;
 $col-grey-dark:         #363636;
+$col-grey:              grey;
 $col-grey-light:        #e1e1e1;
 
 $font-main:             'Montserrat', sans-serif;
@@ -26,6 +27,8 @@ $h1size:                30px;
 $h2size:                25px;
 $h3size:                20px;
 $h4size:                18px;
+$h5size:                15px;
+$h6size:                12px;
 $psize:                 15px;
 
 $dotted:                1px dotted $col-black;
