--- a/spe_events/static/atce/css/mainstyle.scss
+++ b/spe_events/static/atce/css/mainstyle.scss
@@ -3,6 +3,7 @@
 ====================================================================== */
 @import 'vars';
 
+//@import "reset";
 @import 'basehtml';
 @import 'header';
 @import 'content';
