--- a/spe_events/static/atce/css/_content.scss
+++ b/spe_events/static/atce/css/_content.scss
@@ -3,6 +3,41 @@
 ====================================================================== */
 @import 'vars';
 
+
+/* =================================================================== */
+/* PANELS */
+
+.panel-intro {
+  .panel-body {
+    padding:              0;
+  }
+}
+.panel-tabs {
+  border:                 2px solid $col-grey-light;
+  padding:                0;
+
+  .panel-body {
+    padding:              0;
+  }
+
+  .nav-tabs {
+    background-color:       $col-grey-light;
+
+    li {
+      //width:                100%;
+    }
+  }
+  .nav-tabs>li>a, .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+    border:                 0;
+    color:                  $col-black;
+  }
+  .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus {
+    color:                  $col-spe-blue;
+  }
+  .tab-content {
+    padding:                20px 10px 0 10px;
+  }
+}
 .sponsorBar {
   background-color:       $col-grey-light;
 }
@@ -14,7 +49,8 @@
   }
 
   h3 {
-    font-weight:            $font-light;
+    font-weight:          $font-light;
     margin-bottom:        20px;
   }
 }
+
