--- a/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
@@ -2,16 +2,15 @@
 
 {% for item in items %}
     <p>
-    {{ item.order }}<br>
-    {{ item.item_list }}<br>
-    {{ item.image }}<br>
-    {{ item.title }}<br>
-    {{ item.text }}<br>
-    {{ item.external_link }}<br>
-    {{ item.internal_link }}<br>
-    {{ item.isvisible }}<br>
-    {{ item.issponsor }}<br>
-    {{ item.sponsorlevele }}<br>
-    {{ item.sponsoredevents }}<br>
+        {{ item.order }}<br>
+        {{ item.item_list }}<br>
+        {{ item.image.url }}<br>
+        {{ item.title }}<br>
+        {{ item.text }}<br>
+        {{ item.get_absolute_url }}<br>
+        {{ item.isvisible }}<br>
+        {{ item.issponsor }}<br>
+        {{ item.sponsorlevele }}<br>
+        {{ item.sponsoredevents }}<br>
     </p>
 {% endfor %}
