Item Image position

--- a/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
@@ -2,6 +2,7 @@
 
 {% for item in items %}
     <p>
+        {{ instance.id }}<br>
         {{ item.order }}<br>
         {{ item.item_list }}<br>
         {{ item.image.url }}<br>
