--- a/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_boxes.html
@@ -6,6 +6,7 @@
         {{ item.order }}<br>
         {{ item.item_list }}<br>
         {{ item.image.url }}<br>
+        {{ item.imageposition }}<br>
         {{ item.title }}<br>
         {{ item.text }}<br>
         {{ item.get_absolute_url }}<br>
