--- a/mainsite/static/jpt/css/_tiles.scss
+++ b/mainsite/static/jpt/css/_tiles.scss
@@ -36,7 +36,7 @@
     color:              $col-black;
   }
 }
-.tile, .tile-blue, .tile-white, .tile-alert, .tile-poll, .eventsNearYou {
+.tile, .tile-blue, .tile-white, .tile-alert, .tile-transparent, .tile-poll, .eventsNearYou {
   margin-bottom:        10px;
   //padding:              15px;
   min-width:            150px;
