--- a/spe_events/templates/spe_events/plugins/image_items/ii_jumbotron.html
+++ b/spe_events/templates/spe_events/plugins/image_items/ii_jumbotron.html
@@ -1,17 +1,9 @@
+{% load cms_tags sekizai_tags %}
 <!-- This is the JumboTron template. -->
 
 {% for item in items %}
-    <p>
-    {{ item.order }}<br>
-    {{ item.item_list }}<br>
-    {{ item.image }}<br>
-    {{ item.title }}<br>
-    {{ item.text }}<br>
-    {{ item.external_link }}<br>
-    {{ item.internal_link }}<br>
-    {{ item.isvisible }}<br>
-    {{ item.issponsor }}<br>
-    {{ item.sponsorlevele }}<br>
-    {{ item.sponsoredevents }}<br>
-    </p>
+    {% if item.image and item.image.url and item.isvisible %}
+        <a href="{{ item.get_absolute_url }}"><div class="col-xs-12 padZero jumbotron" style="background-image: url({{ item.image.url }});
+                background-position:{{ item.imageposition }}; background-size: cover;"></div></a>
+    {% endif %}
 {% endfor %}
